[gd_scene load_steps=2 format=3 uid="uid://bg2k1vujfgla8"]

[ext_resource type="Script" path="res://hangman.gd" id="1_add1w"]

[node name="Hangman" type="Node2D"]
script = ExtResource("1_add1w")

[node name="WordLabel" type="Label" parent="."]
offset_left = 422.0
offset_top = 276.0
offset_right = 1145.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 102
text = "_"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="IncorrectLabel" type="Label" parent="."]
offset_left = 577.0
offset_top = 4.0
offset_right = 908.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 38
text = "Incorrect guesses:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttemptsLabel" type="Label" parent="."]
offset_left = 876.0
offset_top = 617.0
offset_right = 1040.0
offset_bottom = 648.0
theme_override_font_sizes/font_size = 22
text = "Attempts left: 6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HangManSprite" type="Sprite2D" parent="."]
position = Vector2(152.22, 258.91)
scale = Vector2(10, 10)

[node name="MessageLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 5.0
offset_top = 579.0
offset_right = 305.0
offset_bottom = 612.0
scale = Vector2(1.98, 1.98)
theme_override_font_sizes/font_size = 18
text = "TYPE, TYPE, TYPE (in keyboard)"
